# adversarial-attacks-dfl

./: .gitignore  README.md  adv_attack.py  adv_error_metrics.py  create_plots.py  helpers.py  pyproject.toml  run_adv_attacks.py
AdversarialAttacks/: AdversarialAttackConfig_Knapsack  AdversarialAttacksConfig_ShortestPath.yml  AdversarialAttacksConfig_Warcraft.yml
HyperparameterOptimization/: configspaces.py  hpo_smac.py  hyperparameterConfigKnapsack.yml  hyperparameterConfigShortestPath.yml
Knapsack/DPO/: fenchel_young.py
Knapsack/Trainer/: CacheLosses.py  PO_models.py  comb_solver.py  data_utils.py  diff_layer.py  utils.py
Knapsack/intopt/: intopt.py
ModelCreators/: KnapsackModelsConfig_advancedModels.yml  KnapsackModelsConfig_standardModels.yml  ShortestPathModelsConfig_advancedModels.yml  ShortestPathModelsConfig_standardModels.yml  WarcraftModelsConfig_standardModels_24x24.yml  create_knapsack_models.py  create_shortestPath_models.py  create_warcraft_models.py  predictive_net_architectures.py
Notebooks/: evaluation_notebook_general_ShortestPath.ipynb  evaluation_notebook_general_warcraft.ipynb  shared_plots.ipynb  warcraft_sols.ipynb
ShortestPath/DPO/: fenchel_young.py  perturbations.py
ShortestPath/Trainer/: CacheLosses.py  PO_modelsSP.py  data_utils.py  diff_layer.py  optimizer_module.py  utils.py
ShortestPath/imle/: wrapper.py
ShortestPath/intopt/: intopt.py
tests/: test_attacker_solvers.py  test_data.py  test_solvers.py
warcraft/Trainer/: Trainer.py  computervisionmodels.py  data_utils.py  diff_layer.py  metric.py  utils.py
(+9 files in other folders)
